# ytmdp

./: .gitignore  README.md  meson.build
data/: application.css  com.github.lxmcf.ytmdp.gresource.xml
src/: Application.vala  Main.vala  MainWindow.vala  WebContext.vala  meson.build
src/Views/: MainView.vala
src/Widgets/: HeaderBar.vala  WindowStack.vala
